government_api/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: government-api
  namespace: default
  labels:
    app: government-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: government-api
  template:
    metadata:
      labels:
        app: government-api
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        fsGroup: 2000
      serviceAccountName: government-api-service-account
      containers:
      - name: government-api
        image: 046651569857.dkr.ecr.us-east-1.amazonaws.com/dafault/government-api:1.0.0
        imagePullPolicy: Always
        ports:
        - containerPort: 8081
          name: http
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
              - ALL
          readOnlyRootFilesystem: true
        livenessProbe:
          httpGet:
            path: /health
            port: 8081
          initialDelaySeconds: 10
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /health
            port: 8081
          initialDelaySeconds: 5
          periodSeconds: 5
        resources:
          requests:
            memory: "64Mi"
            cpu: "100m"
          limits:
            memory: "128Mi"
            cpu: "200m"
