government_api/k8s/network-policies.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: government-api-netpol
  namespace: default
  annotations:
   argocd.argoproj.io/sync-wave: "0"
spec:
  podSelector:
    matchLabels:
      app: government-api

  policyTypes:
  - Ingress
  - Egress

  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: loan-validator-portal
    ports:
    - port: 8080
      protocol: TCP

  egress:
  - to:
    - podSelector:
        matchLabels:
          app: postgres
    ports:
    - port: 5432
      protocol: TCP

  - to:
    - podSelector:
        matchLabels:
          app: otel-collector
    ports:
    - port: 4317
      protocol: TCP

  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kube-system
      podSelector:
        matchLabels:
          k8s-app: kube-dns
    ports:
    - port: 53
      protocol: UDP
